--- a/template/package.json
+++ b/template/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@oneflow/ofs-vue-layout": "1.1.12",
+		"bootstrap-sass": "3.3.7",
 		"vue": "^2.3.3",
 		"vue-router": "^2.3.1",
 		"vuex": "2.3.1"
