--- a/template/package.json
+++ b/template/package.json
@@ -14,7 +14,7 @@
 	},
 	"dependencies": {
 		"@oneflow/ofs-vue-layout": "1.1.12",
-		"@oneflow/ofs-vuex-crud": "file:../ofs-vuex-crud",
+		"@oneflow/ofs-vuex-crud": "0.0.2",
 		"bootstrap-sass": "3.3.7",
 		"vue": "^2.3.3",
 		"vue-router": "^2.3.1",
