--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@ node_modules
 .DS_Store
 docs/_book
 .idea/
+.DS_Store
+node_modules/
+dist/
+template/node_modules/
+template/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+test/unit/coverage
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+package-lock.json
+template/package-lock.json
