--- a/template/package.json
+++ b/template/package.json
@@ -13,42 +13,20 @@
 		"lint": "eslint --ext .js,.vue src test/unit/specs"
 	},
 	"dependencies": {
-		"@oneflow/ofs-vue-layout": "1.1.23",
-		"@oneflow/ofs-vuex-crud": "0.0.6",
-		"vue": "2.4.2",
-		"vue-router": "^2.3.1",
-		"vuex": "2.3.1"
+		"@oneflow/ofs-vue-layout": "1.1.29",
+		"@oneflow/ofs-vuex-crud": "1.0.3",
+		"bootstrap-vue": "1.2.0",
+		"vue": "2.5.9",
+		"vue-router": "3.0.1",
+		"vuex": "3.0.1"
 	},
 	"devDependencies": {
-		"autoprefixer": "^6.7.2",
-		"babel-core": "6.26.0",
-		"babel-eslint": "^7.1.1",
-		"babel-loader": "^6.2.10",
 		"babel-plugin-istanbul": "^4.1.1",
-		"babel-plugin-transform-runtime": "^6.22.0",
-		"babel-preset-env": "^1.3.2",
-		"babel-preset-stage-2": "^6.22.0",
-		"babel-register": "6.26.0",
 		"bootstrap-sass": "3.3.7",
 		"chai": "^3.5.0",
-		"chalk": "^1.1.3",
 		"connect-history-api-fallback": "^1.3.0",
-		"copy-webpack-plugin": "^4.0.1",
 		"cross-env": "^4.0.0",
-		"css-loader": "0.28.7",
-		"eslint": "^3.19.0",
-		"eslint-config-airbnb-base": "11.3.2",
-		"eslint-friendly-formatter": "^2.0.7",
-		"eslint-import-resolver-webpack": "^0.8.1",
-		"eslint-loader": "1.9.0",
-		"eslint-plugin-html": "^2.0.0",
-		"eslint-plugin-import": "2.7.0",
-		"eventsource-polyfill": "^0.9.6",
 		"express": "4.15.4",
-		"extract-text-webpack-plugin": "^2.0.0",
-		"file-loader": "0.11.2",
-		"friendly-errors-webpack-plugin": "^1.1.3",
-		"html-webpack-plugin": "2.30.1",
 		"http-proxy-middleware": "^0.17.3",
 		"inject-loader": "3.0.1",
 		"karma": "1.7.1",
@@ -64,23 +42,57 @@
 		"mocha": "3.5.0",
 		"node-sass": "4.5.3",
 		"opn": "^4.0.2",
-		"optimize-css-assets-webpack-plugin": "^1.3.0",
-		"ora": "^1.2.0",
 		"phantomjs-prebuilt": "2.1.15",
-		"rimraf": "^2.6.0",
 		"sass-loader": "6.0.6",
-		"semver": "5.4.1",
-		"shelljs": "^0.7.6",
 		"sinon": "2.4.1",
 		"sinon-chai": "2.13.0",
-		"url-loader": "0.5.9",
-		"vue-loader": "12.2.2",
-		"vue-style-loader": "^3.0.1",
-		"vue-template-compiler": "2.4.2",
-		"webpack": "2.7.0",
-		"webpack-bundle-analyzer": "2.9.0",
 		"webpack-dev-middleware": "1.12.0",
 		"webpack-hot-middleware": "2.19.1",
+		"autoprefixer": "^7.1.2",
+		"babel-core": "^6.22.1",
+		"babel-eslint": "^7.1.1",
+		"babel-loader": "^7.1.1",
+		"babel-plugin-transform-runtime": "^6.22.0",
+		"babel-preset-env": "^1.3.2",
+		"babel-preset-stage-2": "^6.22.0",
+		"babel-register": "^6.22.0",
+		"chalk": "^2.0.1",
+		"copy-webpack-plugin": "^4.0.1",
+		"css-loader": "^0.28.0",
+		"eslint": "^3.19.0",
+		"eslint-friendly-formatter": "^3.0.0",
+		"eslint-loader": "^1.7.1",
+		"eslint-plugin-html": "^3.0.0",
+		"eslint-config-airbnb-base": "^11.3.0",
+		"eslint-import-resolver-webpack": "^0.8.3",
+		"eslint-plugin-import": "^2.7.0",
+		"eventsource-polyfill": "^0.9.6",
+		"extract-text-webpack-plugin": "^3.0.0",
+		"file-loader": "^1.1.4",
+		"friendly-errors-webpack-plugin": "^1.6.1",
+		"html-webpack-plugin": "^2.30.1",
+		"webpack-bundle-analyzer": "^2.9.0",
+		"babel-jest": "^21.0.2",
+		"babel-plugin-dynamic-import-node": "^1.2.0",
+		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+		"jest": "^21.2.0",
+		"jest-serializer-vue": "^0.3.0",
+		"vue-jest": "^1.0.2",
+		"node-notifier": "^5.1.2",
+		"postcss-import": "^11.0.0",
+		"postcss-loader": "^2.0.8",
+		"semver": "^5.3.0",
+		"shelljs": "^0.7.6",
+		"optimize-css-assets-webpack-plugin": "^3.2.0",
+		"ora": "^1.2.0",
+		"rimraf": "^2.6.0",
+		"url-loader": "^0.5.8",
+		"vue-loader": "^13.3.0",
+		"vue-style-loader": "^3.0.1",
+		"vue-template-compiler": "^2.5.2",
+		"portfinder": "^1.0.13",
+		"webpack": "^3.6.0",
+		"webpack-dev-server": "^2.9.1",
 		"webpack-merge": "^4.1.0"
 	},
 	"engines": {
