--- a/template/package.json
+++ b/template/package.json
@@ -21,14 +21,42 @@
 		"vuex": "3.0.1"
 	},
 	"devDependencies": {
+		"autoprefixer": "^7.1.2",
+		"babel-core": "^6.22.1",
+		"babel-eslint": "^7.1.1",
+		"babel-jest": "^21.0.2",
+		"babel-loader": "^7.1.1",
+		"babel-plugin-dynamic-import-node": "^1.2.0",
 		"babel-plugin-istanbul": "^4.1.1",
+		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+		"babel-plugin-transform-runtime": "^6.22.0",
+		"babel-preset-env": "^1.3.2",
+		"babel-preset-stage-2": "^6.22.0",
+		"babel-register": "^6.22.0",
 		"bootstrap-sass": "3.3.7",
 		"chai": "^3.5.0",
+		"chalk": "^2.0.1",
 		"connect-history-api-fallback": "^1.3.0",
+		"copy-webpack-plugin": "^4.0.1",
 		"cross-env": "^4.0.0",
+		"css-loader": "^0.28.0",
+		"eslint": "^3.19.0",
+		"eslint-config-airbnb-base": "^11.3.0",
+		"eslint-friendly-formatter": "^3.0.0",
+		"eslint-import-resolver-webpack": "^0.8.3",
+		"eslint-loader": "^1.7.1",
+		"eslint-plugin-html": "^3.0.0",
+		"eslint-plugin-import": "^2.7.0",
+		"eventsource-polyfill": "^0.9.6",
 		"express": "4.15.4",
+		"extract-text-webpack-plugin": "^3.0.0",
+		"file-loader": "^1.1.4",
+		"friendly-errors-webpack-plugin": "^1.6.1",
+		"html-webpack-plugin": "^2.30.1",
 		"http-proxy-middleware": "^0.17.3",
 		"inject-loader": "3.0.1",
+		"jest": "^21.2.0",
+		"jest-serializer-vue": "^0.3.0",
 		"karma": "1.7.1",
 		"karma-coverage": "^1.1.1",
 		"karma-mocha": "^1.3.0",
@@ -40,59 +68,31 @@
 		"karma-webpack": "2.0.4",
 		"lolex": "^1.5.2",
 		"mocha": "3.5.0",
+		"node-notifier": "^5.1.2",
 		"node-sass": "4.5.3",
 		"opn": "^4.0.2",
-		"phantomjs-prebuilt": "2.1.15",
-		"sass-loader": "6.0.6",
-		"sinon": "2.4.1",
-		"sinon-chai": "2.13.0",
-		"webpack-dev-middleware": "1.12.0",
-		"webpack-hot-middleware": "2.19.1",
-		"autoprefixer": "^7.1.2",
-		"babel-core": "^6.22.1",
-		"babel-eslint": "^7.1.1",
-		"babel-loader": "^7.1.1",
-		"babel-plugin-transform-runtime": "^6.22.0",
-		"babel-preset-env": "^1.3.2",
-		"babel-preset-stage-2": "^6.22.0",
-		"babel-register": "^6.22.0",
-		"chalk": "^2.0.1",
-		"copy-webpack-plugin": "^4.0.1",
-		"css-loader": "^0.28.0",
-		"eslint": "^3.19.0",
-		"eslint-friendly-formatter": "^3.0.0",
-		"eslint-loader": "^1.7.1",
-		"eslint-plugin-html": "^3.0.0",
-		"eslint-config-airbnb-base": "^11.3.0",
-		"eslint-import-resolver-webpack": "^0.8.3",
-		"eslint-plugin-import": "^2.7.0",
-		"eventsource-polyfill": "^0.9.6",
-		"extract-text-webpack-plugin": "^3.0.0",
-		"file-loader": "^1.1.4",
-		"friendly-errors-webpack-plugin": "^1.6.1",
-		"html-webpack-plugin": "^2.30.1",
-		"webpack-bundle-analyzer": "^2.9.0",
-		"babel-jest": "^21.0.2",
-		"babel-plugin-dynamic-import-node": "^1.2.0",
-		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-		"jest": "^21.2.0",
-		"jest-serializer-vue": "^0.3.0",
-		"vue-jest": "^1.0.2",
-		"node-notifier": "^5.1.2",
-		"postcss-import": "^11.0.0",
-		"postcss-loader": "^2.0.8",
-		"semver": "^5.3.0",
-		"shelljs": "^0.7.6",
 		"optimize-css-assets-webpack-plugin": "^3.2.0",
 		"ora": "^1.2.0",
+		"phantomjs-prebuilt": "2.1.15",
+		"portfinder": "^1.0.13",
+		"postcss-import": "^11.0.0",
+		"postcss-loader": "^2.0.8",
 		"rimraf": "^2.6.0",
+		"sass-loader": "6.0.6",
+		"semver": "^5.3.0",
+		"shelljs": "^0.7.6",
+		"sinon": "2.4.1",
+		"sinon-chai": "2.13.0",
 		"url-loader": "^0.5.8",
+		"vue-jest": "^1.0.2",
 		"vue-loader": "^13.3.0",
 		"vue-style-loader": "^3.0.1",
 		"vue-template-compiler": "^2.5.2",
-		"portfinder": "^1.0.13",
 		"webpack": "^3.6.0",
+		"webpack-bundle-analyzer": "2.9.1",
+		"webpack-dev-middleware": "1.12.0",
 		"webpack-dev-server": "^2.9.1",
+		"webpack-hot-middleware": "2.19.1",
 		"webpack-merge": "^4.1.0"
 	},
 	"engines": {
