--- a/template/package.json
+++ b/template/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@oneflow/ofs-vue-layout": "1.1.29",
 		"@oneflow/ofs-vuex-crud": "1.0.3",
+		"axios": "0.17.1",
 		"bootstrap-vue": "1.2.0",
 		"vue": "2.5.13",
 		"vue-i18n": "7.4.2",
