--- a/template/.babelrc
+++ b/template/.babelrc
@@ -8,11 +8,11 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["lodash", "transform-runtime"],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
-      "plugins": ["istanbul"]
+      "plugins": ["istanbul", "lodash"]
     }
   }
 }
