--- a/template/package.json
+++ b/template/package.json
@@ -11,17 +11,19 @@
 		"lint": "eslint --ext .js,.vue src test/unit/specs"
 	},
 	"dependencies": {
-		"@oneflow/ofs-vue-layout": "1.1.67",
-		"@oneflow/ofs-vuex-crud": "1.1.4",
+		"@oneflow/ofs-vue-layout": "1.1.70",
+		"@oneflow/ofs-vuex-crud": "1.1.7",
 		"axios": "0.17.1",
-		"bootstrap-vue": "2.0.0-rc.1",
+		"bootstrap-vue": "2.0.0-rc.11",
 		"vue": "2.5.16",
-		"vue-i18n": "7.4.2",
+		"vue-i18n": "7.8.0",
 		"vue-router": "3.0.1",
 		"vuex": "3.0.1",
 		"vuex-persistedstate": "2.4.2"
 	},
 	"devDependencies": {
+		"@babel/cli": "7.0.0-beta.51",
+		"@babel/preset-env": "7.0.0-beta.51",
 		"autoprefixer": "^7.1.2",
 		"babel-core": "^6.22.1",
 		"babel-eslint": "^7.2.3",
@@ -29,6 +31,7 @@
 		"babel-jest": "^21.0.2",
 		"babel-loader": "^7.1.1",
 		"babel-plugin-dynamic-import-node": "^1.2.0",
+		"babel-plugin-lodash": "3.3.4",
 		"babel-plugin-syntax-jsx": "^6.18.0",
 		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
 		"babel-plugin-transform-runtime": "^6.22.0",
