updated dependencies, prettierc

--- a/template/package.json
+++ b/template/package.json
@@ -6,16 +6,16 @@
 	"private": true,
 	"scripts": {
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-		"start": "nppm run dev",
+		"start": "npm run dev",
 		"build": "node build/build.js",
 		"lint": "eslint --ext .js,.vue src test/unit/specs"
 	},
 	"dependencies": {
-		"@oneflow/ofs-vue-layout": "1.1.70",
-		"@oneflow/ofs-vuex-crud": "1.1.7",
-		"axios": "0.17.1",
+		"@oneflow/ofs-vue-layout": "1.1.89",
+		"@oneflow/ofs-vuex-crud": "1.1.15",
+		"axios": "0.18.0",
 		"bootstrap-vue": "2.0.0-rc.11",
-		"vue": "2.5.16",
+		"vue": "2.5.21",
 		"vue-i18n": "7.8.0",
 		"vue-router": "3.0.1",
 		"vuex": "3.0.1",
@@ -69,7 +69,7 @@
 		"vue-jest": "^1.0.2",
 		"vue-loader": "^13.3.0",
 		"vue-style-loader": "^3.0.1",
-		"vue-template-compiler": "2.5.16",
+		"vue-template-compiler": "2.5.21",
 		"webpack": "^3.6.0",
 		"webpack-bundle-analyzer": "^2.9.0",
 		"webpack-dev-server": "^2.9.1",
