--- a/template/package.json
+++ b/template/package.json
@@ -8,7 +8,9 @@
 		"dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
 		"start": "npm run dev",
 		"build": "node build/build.js",
-		"lint": "eslint --ext .js,.vue src test/unit/specs"
+		"lint": "eslint --ext .js,.vue src test/unit/specs",
+		"test": "npm run test:unit",
+		"test:unit": "jest --config jest.config.js"
 	},
 	"dependencies": {
 		"@oneflow/ofs-vue-layout": "1.1.89",
@@ -24,6 +26,14 @@
 	"devDependencies": {
 		"@babel/cli": "7.0.0-beta.51",
 		"@babel/preset-env": "7.0.0-beta.51",
+		"@vue/cli-plugin-babel": "^3.1.0",
+		"@vue/cli-plugin-e2e-cypress": "^3.1.0",
+		"@vue/cli-plugin-eslint": "^3.1.0",
+		"@vue/cli-plugin-pwa": "^3.1.0",
+		"@vue/cli-plugin-unit-jest": "^3.1.0",
+		"@vue/cli-service": "^3.1.0",
+		"@vue/eslint-config-airbnb": "^4.0.0",
+		"@vue/test-utils": "^1.0.0-beta.20",
 		"autoprefixer": "^7.1.2",
 		"babel-core": "^6.22.1",
 		"babel-eslint": "^7.2.3",
